cogl/pango/Makefile.am pass EXTRA_LDFLAGS for linking
When building on windows for example we need to ensure we pass
-no-undefined to the linker. Although we were substituting a
COGL_EXTRA_LDFLAGS variable from our configure.ac we forgot to
reference that when linking cogl-pango.

--- a/clutter/cogl/pango/Makefile.am
+++ b/clutter/cogl/pango/Makefile.am
@@ -21,7 +21,7 @@ endif
 
 libcoglpango_la_SOURCES = $(source_c) $(source_h) $(source_h_priv)
 libcoglpango_la_CFLAGS = $(COGL_DEP_CFLAGS) $(COGL_EXTRA_CFLAGS) $(MAINTAINER_CFLAGS)
-libcoglpango_la_LIBADD = $(COGL_DEP_LIBS)
+libcoglpango_la_LIBADD = $(COGL_DEP_LIBS) $(COGL_EXTRA_LDFLAGS)
 if COGL_STANDALONE_BUILD
 libcoglpango_la_LIBADD += $(top_builddir)/cogl/libcogl.la
 libcoglpango_la_LDFLAGS = \
